--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -36,13 +36,14 @@
 
 .btn-cart {
   width: 100%;
-  background-color: #ffe0b3;
+  background-color: #7990be;
   border: 1px solid #95a0a7;
-  border-radius: 0 0 8px 8px;
+  border-radius: 0 0 6px 6px;
   position: absolute;
   bottom: 0;
+  color: #f0ffff;
 }
 
 .btn-cart:hover {
-  background-color: orange;
+  background-color: #1d51b8;
 }
